<resources>
    <string name="app_name">YesOptusTest</string>
    <string name="scenario_home">Home Scenario</string>
    <string name="scenario_one">Scenario One</string>
    <string name="scenario_two">Scenario Two</string>
    <string name="viewpager_click">For ViewPager Click Me</string>
    <string name="textview_one">TextView 1</string>
    <string name="textview_two">TextView 2</string>
    <string name="textview_three">TextView 3</string>
    <string name="red">Red</string>
    <string name="blue">Blue</string>
    <string name="green">Green</string>
    <string name="viewpager_text">Fragment No %s</string>
    <string name="navigate">Navigate</string>
    <string name="mode_of_transport">Mode of Transport: </string>
    <string name="mode_of_transport_car">Car - %s mins</string>
    <string name="mode_of_transport_train">Train - %s mins</string>
    <string name="tv_click_replace">This text will be replaced by Item clicked from Point 1</string>
</resources>
