<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="com.samit.yesoptustest.data.OptusUI" />

        <import type="android.view.View" />

        <import type="java.util.List" />

        <variable
            name="users"
            type="List&lt;OptusUI>" />

        <variable
            name="strings"
            type="List&lt;String>" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout style="@style/MatchParentStyle">

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:textSize="16sp"
            android:background="@drawable/spinner_bg"
            app:entries="@{strings}"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_mode_of_transport"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/mode_of_transport"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinner" />

        <TextView
            android:id="@+id/tv_car"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mode_of_transport_car"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_mode_of_transport" />

        <TextView
            android:id="@+id/tv_train"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mode_of_transport_train"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_car" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/navigate"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_train" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
